# ArborBot

./: .env.example  .gitignore  AI_TRADER_POLICY.md  API_CONTRACT.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  RISK_POLICY.md  SECURITY.md  STRATEGY_GOVERNANCE.md  docker-compose.yml  pom.xml
common/: pom.xml
docs/decision-log/: ADR-001-system-architecture.md  ADR-002-order-safety.md  ADR-003-ai-trader-governance.md
docs/integration/: TOSS_BROKER_INTEGRATION.md
docs/sharing/: DEVELOPMENT_GUIDE.md  PROJECT_OVERVIEW.md  TECH_STACK.md
docs/system/: AI_TRADER_FLOW.md  COMPONENT_RESPONSIBILITIES.md  DATA_MODEL.md  DEPLOYMENT_GUIDE.md  END_TO_END_FLOW.md  EVENT_FLOW.md  FAILURE_AND_RECOVERY.md  OBSERVABILITY.md  ORDER_LIFECYCLE.md  PORTFOLIO_MANAGEMENT_RULES.md  RISK_ENGINE_RULES.md  STRATEGY_SELECTION_FLOW.md
research/: README.md  pyproject.toml
research/arborbot_research/: __init__.py  cli.py  data.py  engine.py  metrics.py  strategy.py
research/tests/: test_engine.py  test_metrics.py
trading-api/: pom.xml
trading-api/src/main/java/com/tossai/trading/: TradingApplication.java
trading-api/src/main/resources/: application-mysql.yml  application.yml
trading-api/src/test/java/com/tossai/trading/: ApiSmokeTest.java  AutoTradingFlowTest.java  BacktestPromotionTest.java  DailyLossLimitTest.java  HaltedSymbolRejectTest.java  (+7 more)
trading-application/: pom.xml
trading-domain/: pom.xml
trading-infrastructure/: pom.xml
trading-infrastructure/src/main/resources/db/migration/: V1__init.sql  V2__seed.sql  V3__instrument.sql  V4__settlement.sql
(+112 files in other folders)
